--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "setup": "yarn install && rm -rf ios/build && (cd ios;pod install)"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-native": "0.76.5",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
     "@types/dotenv-parse-variables": "^2.0.3",
@@ -20,9 +18,12 @@
     "axios": "^1.7.9",
     "axios-case-converter": "^1.1.1",
     "dotenv-parse-variables": "^2.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
     "react-native-config": "^1.5.3",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
+    "react-native-svg": "^15.10.1",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
